<resources>
    <string name="app_name">Bluetooth LE Bendlabs</string>
    <string name="bl_connected">Connected to LE</string>
    <string name="bl_disconnected">Disconnected from LE</string>
    <string name="bl_not_found">Status: Bluetooth not found</string>
    <string name="bl_connecting">Connecting…</string>
    <string name="bl_show_paired">Show Paired Devices</string>

    <string name="only_ble">Only BLE Devices supported</string>
    <string name="bl_enabled">Bluetooth enabled</string>
    <string name="bL_disbaled">Bluetooth disabled</string>
    <string name="bl_already_on">Bluetooth is already on</string>
    <string name="bl_device_notfound">Bluetooth device not found!</string>
    <string name="title_activity_maps">Map</string>
    <string name="status">Status:</string>
    <string name="lt_bluetooth_status">Not connected yet</string>
    <string name="x">X:</string>
    <string name="y">Y:</string>
    <string name="connect">Connect</string>
    <string name="go_to_maps">Go to Maps</string>
    <string name="subscribe_to_angle_data_instantly">Subscribe to Angle Data instantly</string>
    <string name="sample_rate">Sample Rate</string>
    <string name="set_sample_rate">Set Sample Rate</string>
    <string name="calibrate">Calibrate</string>
    <string name="reset_calibration">Reset Calibration</string>
    <string name="reset_sensor_software">Reset Sensor Software</string>
    <string name="disconnect">Disconnect</string>
    <string name="turn_on_notifications">Turn on notifications</string>
    <string name="turn_off_notifications">Turn off notifications</string>
    <string name="read_sensor_information">Read Sensor Information</string>
    <string name="default_sample_rate">20</string>
    <string name="searching_for_sensor">Searching for Sensor</string>
    <string name="device_not_found">Device not found</string>
</resources>
