<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/status"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/bluetoothStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_weight="0.9"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/lt_bluetooth_status" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/angleresult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="invisible">

        <TextView
            android:id="@+id/textview"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/x"
            android:layout_width="0dp" />

        <TextView
            android:id="@+id/angle_x"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text=""
            android:layout_width="0dp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/y"
            android:layout_width="0dp" />

        <TextView
            android:id="@+id/angle_y"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text=""
            android:layout_width="0dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/connect"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:layout_weight="1"
            android:text="@string/connect" />

        <Switch
            android:id="@+id/initialAngle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:onClick="onClick"
            android:text="@string/subscribe_to_angle_data_instantly" />

    </LinearLayout>


    <Button
        android:id="@+id/btn_maps"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:text="@string/go_to_maps" />

    <SeekBar
        android:id="@+id/initialAngleSlider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="500"
        android:min="1"
        android:progress="20" />


    <EditText
        android:id="@+id/sampleRate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/sample_rate"
        android:inputType="number"
        android:maxEms="16483"
        android:minEms="1"
        android:text="@string/default_sample_rate"
        android:autofillHints="@string/sample_rate" />

    <Button
        android:id="@+id/rateButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:text="@string/set_sample_rate" />

    <Button
        android:id="@+id/calibrate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:text="@string/calibrate" />

    <Button
        android:id="@+id/reset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:text="@string/reset_calibration" />

    <Button
        android:id="@+id/resetSoftware"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:text="@string/reset_sensor_software" />

    <Button
        android:id="@+id/disconnect"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:text="@string/disconnect" />
    <Button
        android:id="@+id/turnOn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:text="@string/turn_on_notifications" />

    <Button
        android:id="@+id/turnOff"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:text="@string/turn_off_notifications" />

    <Button
        android:id="@+id/readSensorInformation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:text="@string/read_sensor_information" />

</LinearLayout>

